--- a/JDBC_WEB/src/main/webapp/Main.html
+++ b/JDBC_WEB/src/main/webapp/Main.html
@@ -7,11 +7,11 @@
 <body>
 	<h1>메인페이지</h1>
 	<a href="Join.html"><button>회원가입</button></a>
-	<a href="#"><button>회원삭제</button></a>
-	<a href="#"><button>회원수정</button></a>
+	<a href="Delete.html"><button>회원삭제</button></a>
+	<a href="Update.html"><button>회원수정</button></a>
 	
-	<a href="#"><button>회원전체검색</button></a>
-	<a href="#"><button>회원검색</button></a>
+	<a href="Select.jsp"><button>회원전체검색</button></a>
+	<a href="OneSelect.html"><button>회원검색</button></a>
 	<a href="Login.html"><button>로그인</button></a>
 </body>
 </html>
